# xss-demo

./: database.sqlite  pyproject.toml
src/xss_demo/: app.py
