[tool.poetry]
name = "xss-demo"
version = "0.1.0"
description = ""
authors = ["Set Mao <set.mao@stockfeel.com.tw>"]
readme = "README.md"
packages = [{include = "xss_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
